k8s/postgresDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: voting-app-sa
      containers:
      - image: postgres:15-alpine
        name: postgres
        ports:
          - containerPort: 5432
