k8s/voteDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: yoshitakumi/voting-app-vote:latest
          ports:
            - containerPort: 80
