k8s/resultService.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  ports:
      port: 80
      targetPort: 80
